--- a/hw2/hw2-q4.ipynb
+++ b/hw2/hw2-q4.ipynb
@@ -69,9 +69,9 @@
     "u_ct = np.ones(t_ct.size)\n",
     "\n",
     "# convert to discrete time (4.2)\n",
-    "T = 0.1 # second\n",
-    "t_dt = np.linspace(0, 5, num=20)\n",
-    "u_dt = np.ones(t_dt.size)*3\n",
+    "T = 1 # second\n",
+    "t_dt = np.linspace(0, 5, num=5)\n",
+    "u_dt = np.ones(t_dt.size)\n",
     "example_sys_dt = example_sys_ct.to_discrete(T)\n",
     "\n",
     "\n",
@@ -90,7 +90,7 @@
     "# plot 4.3\n",
     "plt.figure(dpi=100)\n",
     "plt.plot(t_ct, y_ct)\n",
-    "plt.plot(t_dt, y_dt)\n",
+    "plt.scatter(t_dt, y_dt)\n",
     "plt.ylabel('y')\n",
     "plt.xlabel('t')\n",
     "plt.legend(['Continuous Time', 'Discrete Time'])\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +108,7 @@
      "output_type": "stream",
      "text": [
       "i and a20 are 19, [[2584 4181]\n",
-      " [4181 6765]]\n",
-      "k and a20 are 20, 6765\n"
+      " [4181 6765]]\n"
      ]
     }
    ],
